feat: add workspace APIs to portal
